# RustGit

./: .gitignore  .rgitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml
src/: cli.rs  error.rs  hash.rs  ignore.rs  main.rs  utils.rs
src/commands/: cat_file.rs  check_ignore.rs  commit.rs  hash_object.rs  init.rs  mod.rs  read_tree.rs  write_tree.rs
src/objects/: blob.rs  commit.rs  mod.rs  rgit_object.rs  tree.rs
tests/: e2e_test.rs  integration_test.rs
