[package]
name = "rgit"
version = "0.1.0"
authors = ["nero19960329 <wangzhao2013tisnghua@gmail.com>"]
description = "A simple git implementation in Rust"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
sha1 = "0.10.6"

[dev-dependencies]
assert_cmd = "2.0.14"
tempfile = "3.10.1"
