[package]
name = "rgit"
version = "0.1.0"
authors = ["nero19960329 <wangzhao2013tisnghua@gmail.com>"]
description = "A simple git implementation in Rust"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
hex = "0.4.3"
regex = "1.10.3"
sha1 = "0.10.6"

[dev-dependencies]
assert_cmd = "2.0.14"
rand = "0.8.5"
tempfile = "3.10.1"
